Fix wrapping via flexbox, remove shadow and gray label background

--- a/styles.css
+++ b/styles.css
@@ -9,32 +9,14 @@ body.format-progresstopics .progresspendingwarning {
 }
 
 body.format-progresstopics .progresssection {
-    width: 100%;
-    height: 6em;
-    text-align: justify;
-}
-
-body.format-progresstopics .labelsection {
-    width: 100%;
-    height: 2em;
-    text-align: justify;
-}
-
-body.format-progresstopics .dummy-2 {
-    display: inline-block;
-    width: 0;
-}
-
-body.format-progresstopics .dummy {
-    display: inline-block;
-    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
 }
 
 body.format-progresstopics .sectioncontainer {
-    height: 6em;
     width: 6em;
-    margin-left: 5px;
-    margin-right: 5px;
+    margin: 8px;
     position: relative;
     display: inline-block;
     overflow: hidden;
@@ -74,18 +56,11 @@ body.format-progresstopics .pie-wrapper .pie .half-circle {
 }
 
 body.format-progresstopics .sectionnamelabel {
-    width: 6em;
-    display: inline-block;
     text-align: center;
-    overflow: visible;
-    white-space: nowrap;
 }
 
-body.format-progresstopics .pie-wrapper .label {
-    border-radius: 50%;
+body.format-progresstopics .pie-wrapper .fractionlabel {
     color: #7f8c8d;
-    cursor: default;
-    display: block;
     font-size: 1em;
     top: 1em;
     left: 1em;
@@ -94,11 +69,10 @@ body.format-progresstopics .pie-wrapper .label {
     line-height: 4.2em;
     position: absolute;
     text-align: center;
-    word-break: keep-all;
-    white-space: nowrap;
+    font-weight: bold;
 }
 
-body.format-progresstopics .pie-wrapper .shadow {
+body.format-progresstopics .pie-wrapper .background-pie {
     height: 100%;
     width: 100%;
     border: .6em solid #bdc3c7;
